...

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

            <Button
                android:id="@+id/button10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button14"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button12"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button15"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button19"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button18"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button17"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button16"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button20"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button24"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button23"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button22"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button21"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/button25"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/button34"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/button35"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/button27"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/button29"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
...

                    <Button
                        android:id="@+id/button26"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
...

                    <Button
                        android:id="@+id/button31"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
...

                    <Button
                        android:id="@+id/button30"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
...

                <Button
                    android:id="@+id/button32"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
...
