<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="numberView"></string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="x_division">1/x</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="m">M+</string>
    <string name="ms">MS</string>
    <string name="m_minus">M-</string>
    <string name="arrow">←</string>
    <string name="multiply">*</string>
    <string name="six">6</string>
    <string name="penki">5</string>
    <string name="four">4</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plus_minus">±</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="persantage">%</string>
    <string name="square">\u221a</string>
</resources>